--- a/index.html
+++ b/index.html
@@ -536,13 +536,14 @@
             <label for="username">ПІБ</label>
             <input type="text" id="username">
             <label for="tel">Номер телефону</label>
-            <input id="tel" type="" placeholder="+38 (">
+            <input id="tel" placeholder="+38 (">
             <input type="submit" value="Відправити">
             </div>
         </form>
         
         <div class = "shadow"></div>
 
+        <script src="https://unpkg.com/imask"></script>
         <script src = "./script.js"></script>
     </body>
 </html>
