--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class = "page__wrapper">
                     <div class = "logo logo-left">
                         <a href = "http://thermoalliance.com.ua/">
-                            <img src = "logo.png">
+                            <img src = "./images/logo.png">
                         </a>
                     </div>
                     <h2 class = "page__title">Загальна інформація</h2>
@@ -184,7 +184,7 @@
                     </table>
 
                     <div class = "photo-container">
-                        <img src = "./products.png">
+                        <img src = "./images/products.png">
                     </div>
                 </div>
             </section>
@@ -443,7 +443,7 @@
                     </ul>
 
                     <div class = "photo-container">
-                        <img src = "./products2.png">
+                        <img src = "./images/products2.png">
                     </div>
                 </div>
             </section>
@@ -518,7 +518,7 @@
                     </div>
                     <div class = "tel-block">
                         <div class = "tel-img">
-                            <img src = "sandi.png">
+                            <img src = "./images/sandi.png">
                         </div>
                         <a class = "main-number" href = "tel:+380800210247">0-800-210-247</a>
                     </div>
