--- a/index.html
+++ b/index.html
@@ -6,24 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel = "stylesheet" href = "./style.css">
         <link href="https://uk.allfont.net/allfont.css?fonts=days" rel="stylesheet" type="text/css"/>
+        <link rel="icon" type="image/png" href="http://thermoalliance.com.ua/site/img/favicon.png">
     </head>
     <body>
         <div class = "wrapper">
-            <!-- <section class = "page page-bg">
-                <div class = "page__wrapper page__wrapper-main">
-                    <div class = "photo-container main-photo">
-                        <img src = "./main.png">
-                    </div>
-                    <div class = "notification notification__left notification__bottom main__notification">
-                        <p class = "text-important notification__text main__text">thermoalliance.com.ua</p>
-                    </div>
-                </div>
-            </section>
-            <section class = "page page-bg">
-                <div class = "bg-container bg-container-full">
-                    <img src = "ph1.png">
-                </div>
-            </section> -->
             <section class = "page">
                 <div class = "page__wrapper">
                     <div class = "logo logo-left">
@@ -540,7 +526,7 @@
             <label for="username" class = "required">ПІБ</label>
             <input required type="text" id="username">
             <label for="tel" class = "required">Номер телефону</label>
-            <input required id="tel">
+            <input required id="tel" minlength="19">
             <input type="submit" value="Відправити">
             </div>
         </form>
