--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class = "page__wrapper">
                     <div class = "logo logo-left">
                         <a href = "http://thermoalliance.com.ua/">
-                            <img src = "http://thermoalliance.com.ua/site/img/logo.png">
+                            <img src = "./images/logo2.png">
                         </a>
                     </div>
                     <h2 class = "page__title">Загальна інформація</h2>
